# Chronos

./: .gitignore  ARCHITECTURE.md  ToDo.md  whatIdid.md
.github/workflows/: verify.yml
Client/: Client.slnx
Client/Assets/: Chronos.unity
Client/Assets/Scripts/Maxime/: Diego.txt
Client/Assets/Scripts/Network/: NetworkTester.cs  NetworkUtils.cs  Protocol.cs
Client/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Client/ProjectSettings/: ProjectSettings.asset
Server/: CMakeLists.txt  main.cpp
Shared/: Protocol.h  Protocol.hpp
